--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
+  overscroll-behavior: none;
   background-color: #313338;
+  overflow: hidden;
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  -webkit-overflow-scrolling: touch;
+}
+
+* {
+  overscroll-behavior-y: none;
+  -webkit-overflow-scrolling: none;
 }
 
 @layer base {
