--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,48 @@ body {
   -webkit-overflow-scrolling: none;
 }
 
+*::-webkit-scrollbar {
+  width: 7px;
+  width: 7px;
+  height: 7px;
+  height: 7px;
+}
+
+*::-webkit-scrollbar-corner {
+  background-color: var(--scrollbar-track) !important;
+  border: 1px solid var(--scrollbar-track) !important;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: var(--scrollbar-track) !important;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: var(--scrollbar-track-hover) !important;
+  border-left: 1.5px solid var(--scrollbar-track-border) !important;
+  border-right: 1px solid var(--scrollbar-track-border) !important;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: var(--scrollbar-track-active) !important;
+  border-left: 1.5px solid var(--scrollbar-track-border) !important;
+  border-right: 1px solid var(--scrollbar-track-border) !important;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb) !important;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb-hover) !important;
+  border-radius: 14px;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: var(--scrollbar-thumb-active) !important;
+  border-radius: 14px;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -47,6 +89,13 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --scrollbar-track: #2B2D31;
+    --scrollbar-track-border: #2B2D31;
+    --scrollbar-track-hover: #2B2D31;
+    --scrollbar-track-active: #2B2D31;
+    --scrollbar-thumb: #1A1C1E;
+    --scrollbar-thumb-hover: #1A1C1E;
+    --scrollbar-thumb-active: #1A1C1E;
   }
   .dark {
     --background: 240 10% 3.9%;
